force-app/main/default/objects/Brokerage_Summary__c/Brokerage_Summary__c.object-meta.xml
<CustomObject>
    <label>Brokerage Summary</label>
    <nameField>
        <displayFormat>BS-{000000000}</displayFormat>
        <label>Brokerage No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brokerage Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>