force-app/main/default/objects/Brokerage_Summary__c/fields/Additional_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Additional_Brokerage__c</fullName>
    <label>Additional Brokerage %</label>
    <summarizedField>Brokerage__c.Brokerage__c</summarizedField>
    <summaryFilterItems>
        <field>Brokerage__c.Brokerage_Type__c</field>
        <operation>equals</operation>
        <value>Additional Brokerage, Retrofit Brokerage, Cancellation Brokerage</value>
    </summaryFilterItems>
    <summaryForeignKey>Brokerage__c.Brokerage_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>