force-app/main/default/objects/Brokerage_Summary__c/fields/AOP__c.field-meta.xml
<CustomField>
    <fullName>AOP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AOP</label>
    <referenceTo>AOP__c</referenceTo>
    <relationshipLabel>Brokerage Summary</relationshipLabel>
    <relationshipName>Brokerage_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>