force-app/main/default/objects/Brokerage_Summary__c/fields/AOP_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>AOP_Brokerage__c</fullName>
    <label>AOP Brokerage</label>
    <summarizedField>Brokerage__c.AOP_Brokerage__c</summarizedField>
    <summaryForeignKey>Brokerage__c.Brokerage_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>