force-app/main/default/objects/Brokerage_Summary__c/fields/Applied_Slab__c.field-meta.xml
<CustomField>
    <fullName>Applied_Slab__c</fullName>
    <label>Applied Slab</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Slab 1</fullName>
            </value>
            <value>
                <fullName>Slab 2</fullName>
            </value>
            <value>
                <fullName>Slab 3</fullName>
            </value>
            <value>
                <fullName>Slab 4</fullName>
            </value>
            <value>
                <fullName>Slab 5</fullName>
            </value>
            <value>
                <fullName>Slab 6</fullName>
            </value>
            <value>
                <fullName>Slab 7</fullName>
            </value>
            <value>
                <fullName>Slab 8</fullName>
            </value>
            <value>
                <fullName>Slab 9</fullName>
            </value>
            <value>
                <fullName>Slab 10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>