force-app/main/default/objects/Brokerage_Summary__c/fields/Applied_Slab_Name__c.field-meta.xml
<CustomField>
    <fullName>Applied_Slab_Name__c</fullName>
    <label>Applied Slab Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>