force-app/main/default/objects/Brokerage_Summary__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Brokerage Summary</relationshipLabel>
    <relationshipName>Brokerage_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>