force-app/main/default/objects/Brokerage_Summary__c/fields/Count_of_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Bookings__c</fullName>
    <label>Count of Bookings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>