force-app/main/default/objects/Brokerage_Summary__c/fields/CP_Account__c.field-meta.xml
<CustomField>
    <fullName>CP_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Brokerage Summary (CP Account)</relationshipLabel>
    <relationshipName>Brokerage_Summary1</relationshipName>
    <type>Lookup</type>
</CustomField>