force-app/main/default/objects/Brokerage_Summary__c/fields/Custom_Base_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Custom_Base_Brokerage__c</fullName>
    <formula>Booking__r.Custom_Base_Brokerage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Base Brokerage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>