force-app/main/default/objects/Brokerage_Summary__c/fields/Is_Kicker_Incentive_Summary__c.field-meta.xml
<CustomField>
    <fullName>Is_Kicker_Incentive_Summary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Kicker Incentive Summary</label>
    <type>Checkbox</type>
</CustomField>