force-app/main/default/objects/Brokerage_Summary__c/fields/Kicker_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Kicker_Incentive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kicker Incentive</label>
    <referenceTo>Kicker_Incentive__c</referenceTo>
    <relationshipLabel>Brokerage Summary</relationshipLabel>
    <relationshipName>Brokerage_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>