force-app/main/default/objects/Brokerage_Summary__c/fields/Kicker_Incentive_Amount__c.field-meta.xml
<CustomField>
    <fullName>Kicker_Incentive_Amount__c</fullName>
    <label>Kicker Incentive Amount</label>
    <summarizedField>Brokerage__c.Total_Brokerage_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Brokerage__c.Brokerage_Type__c</field>
        <operation>equals</operation>
        <value>Kicker Incentive</value>
    </summaryFilterItems>
    <summaryForeignKey>Brokerage__c.Brokerage_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>