force-app/main/default/objects/Brokerage_Summary__c/fields/Kicker_Type__c.field-meta.xml
<CustomField>
    <fullName>Kicker_Type__c</fullName>
    <formula>TEXT( Kicker_Incentive__r.Type__c )</formula>
    <label>Kicker Type</label>
    <type>Text</type>
</CustomField>