force-app/main/default/objects/Brokerage_Summary__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <formula>IF(RecordType.DeveloperName == &apos;Brokerage_Summary&apos;  , Booking__r.RW_Project_Name__c, Project_Lookup__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project</label>
    <type>Text</type>
</CustomField>