force-app/main/default/objects/Brokerage_Summary__c/fields/Project_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Project_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Brokerage Summary</relationshipLabel>
    <relationshipName>Brokerage_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>