force-app/main/default/objects/Brokerage_Summary__c/fields/Raise_Performa_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Raise_Performa_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Raise Performa Invoice</label>
    <type>Checkbox</type>
</CustomField>