force-app/main/default/objects/Brokerage_Summary__c/fields/SAP_s__c.field-meta.xml
<CustomField>
    <fullName>SAP_s__c</fullName>
    <formula>Channel_Partner__r.SAP_CP_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP&apos;s CP code</label>
    <type>Text</type>
</CustomField>