force-app/main/default/objects/Brokerage_Summary__c/fields/Show_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Show_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Invoice</label>
    <type>Checkbox</type>
</CustomField>