force-app/main/default/objects/Brokerage_Summary__c/fields/Total_Agreement_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Agreement_Value__c</fullName>
    <formula>Booking__r.Agreement_Value_for_brokers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Agreement Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>