force-app/main/default/objects/Brokerage_Summary__c/fields/Total_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Total_Brokerage__c</fullName>
    <label>Total Brokerage</label>
    <summarizedField>Brokerage__c.Total_Brokerage_Amount_without_Kicker__c</summarizedField>
    <summaryFilterItems>
        <field>Brokerage__c.Brokerage_Type__c</field>
        <operation>equals</operation>
        <value>Base Brokerage, Additional Brokerage, Retrofit Brokerage, Cancellation Brokerage, Manual Override Brokerage, Source Change Brokerage Cancellation, Kicker Incentive</value>
    </summaryFilterItems>
    <summaryForeignKey>Brokerage__c.Brokerage_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>