force-app/main/default/objects/Brokerage_Summary__c/fields/Total_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Total_Cancellation__c</fullName>
    <label>Total Cancellation %</label>
    <summarizedField>Brokerage__c.Brokerage__c</summarizedField>
    <summaryFilterItems>
        <field>Brokerage__c.Brokerage_Type__c</field>
        <operation>equals</operation>
        <value>Cancellation Brokerage, Source Change Brokerage Cancellation</value>
    </summaryFilterItems>
    <summaryForeignKey>Brokerage__c.Brokerage_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>