force-app/main/default/objects/Brokerage_Summary__c/fields/Tower_Unit__c.field-meta.xml
<CustomField>
    <fullName>Tower_Unit__c</fullName>
    <formula>Booking__r.Unit_No__r.RW_Param4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tower - Unit</label>
    <type>Text</type>
</CustomField>