force-app/main/default/objects/Brokerage_Summary__c/recordTypes/Brokerage_Summary.recordType-meta.xml
<RecordType>
    <fullName>Brokerage_Summary</fullName>
    <active>true</active>
    <label>Brokerage Summary</label>
</RecordType>