force-app/main/default/objects/Brokerage_Summary__c/recordTypes/Kicker_Summary.recordType-meta.xml
<RecordType>
    <fullName>Kicker_Summary</fullName>
    <active>true</active>
    <label>Kicker Summary</label>
</RecordType>