force-app/main/default/objects/Brokerage_Summary__c/listViews/Brokerage_Summary_Not_Due.listView-meta.xml
<ListView>
    <fullName>Brokerage_Summary_Not_Due</fullName>
    <columns>NAME</columns>
    <columns>Brokerage__c</columns>
    <columns>Applied_Slab_Name__c</columns>
    <columns>Total_Brokerage__c</columns>
    <columns>Booking__c</columns>
    <columns>Tower_Unit__c</columns>
    <columns>Brokerage_Scheme__c</columns>
    <columns>Invoice_Submitted_by_CP__c</columns>
    <columns>Project__c</columns>
    <columns>Status__c</columns>
    <columns>Channel_Partner__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Due</value>
    </filters>
    <label>Brokerage Summary - Not Due</label>
</ListView>