force-app/main/default/objects/Brokerage_Summary__c/listViews/Invoice_Submitted_by_CP.listView-meta.xml
<ListView>
    <fullName>Invoice_Submitted_by_CP</fullName>
    <columns>NAME</columns>
    <columns>Booking_Name__c</columns>
    <columns>Channel_Partner__c</columns>
    <columns>Invoice_Submitted_by_CP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Invoice_Submitted_by_CP__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Invoice Submitted by CP</label>
</ListView>